--- a/Src/Online_Shop/Online_Shop_EFW/Views/Category/Index.cshtml
+++ b/Src/Online_Shop/Online_Shop_EFW/Views/Category/Index.cshtml
@@ -1,6 +1,18 @@
 ﻿@model List<Category>
 
-<h3>Category Name</h3>
+<div class="container">
+    <div class="row pt-4 pb-3">
+        <div class="col-6">
+            <h2 class="text-primary">Category List</h2>
+        </div>
+        <div class="col-6 text-end">
+            <a class="btn btn-primary">
+                <i class="bi bi-plus-square-fill"></i>Create New Category
+            </a>
+        </div>
+    </div>
+
+</div>
 <table class="table table-bordered table-striped">
     <thead>
         <tr>
