--- a/Src/Online_Shop/Online_Shop_EFW/Views/Category/Index.cshtml
+++ b/Src/Online_Shop/Online_Shop_EFW/Views/Category/Index.cshtml
@@ -5,19 +5,20 @@
         <div class="col-6">
             <h2 class="text-primary">Category List</h2>
         </div>
-        <div class="col-6 text-end">
-            <a class="btn btn-primary">
+        <div class="col-6 text-end"> 
+            <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
                 <i class="bi bi-plus-square-fill"></i>Create New Category
             </a>
         </div>
-    </div>
+    </div> 
 
 </div>
 <table class="table table-bordered table-striped">
     <thead>
         <tr>
-            <th>Category Name</th>
+            <th>Category Name </th>
             <th>Display Order</th>
+            
 
         </tr>
     </thead>
